--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"noEmit": false,
 		"paths": {
 			"@narsil-localization/*": ["./vendor/narsil/localization/resources/js/*"],
+			"@narsil-tiptap/*": ["./resources/js/*"],
 			"@narsil-ui/*": ["./vendor/narsil/ui/resources/js/*"]
 		},
 		"resolveJsonModule": true,
